2.ReplicationControllers + ReplicaSets and Services + Ingress/networking/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  # namespace: default
spec:
  # type: ClusterIP
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 9999
      targetPort: 80
