2.ReplicationControllers + ReplicaSets and Services + Ingress/networking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: example.com.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-node-port
            port:
              number: 9999
